Wrapping of buttons fixed

--- a/packages/itwin/grouping-mapping-widget/src/widget/components/Grouping.scss
+++ b/packages/itwin/grouping-mapping-widget/src/widget/components/Grouping.scss
@@ -25,7 +25,9 @@
     }
 
     .toolbar-buttons {
+      display:flex;
       margin-right: $iui-sm;
+      flex-wrap: wrap;
 
       .toggle {
         margin-right: $iui-xs;
